[IMP] Adding invoicing feature

--- a/wonoproperty_pms/views/property_unit_views.xml
+++ b/wonoproperty_pms/views/property_unit_views.xml
@@ -9,8 +9,18 @@
             <form string="Property Unit">
                 <header>
                     <button string='Update Tenant' name="action_open_tenant_wizard" type="object" class="btn-primary"/>
+                    <button string='Create Invoice' name="action_create_invoice" type="object" class="btn-primary"/>
                 </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="action_view_invoice"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-pencil-square-o"
+                            attrs="{'invisible': [('invoice_count', '=', 0)]}">
+                            <field name="invoice_count" widget="statinfo" string="Invoices"/>
+                        </button>
+                    </div>
                     <div class="oe_title">
                         <label for="name" string="Plan Name"/>
                         <h1>
@@ -22,6 +32,7 @@
                             <field name="property_id"/>
                             <field name="tenant_id"/>
                             <field name="date_start"/>
+                            <field name="date_end"/>
                         </group>
                     </group>
                     <notebook>
