--- a/wonoproperty_pms/views/account_move_views.xml
+++ b/wonoproperty_pms/views/account_move_views.xml
@@ -5,9 +5,25 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='payment_reference']" position="after">
+                <field name="property_unit_id" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
+            </xpath>
+
             <xpath expr="//field[@name='invoice_date']" position="after">
-                <field name="date_from"/>
-                <field name="date_to"/>
+                <field name="date_from" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
+                <field name="date_to" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
+                <field name="property_expense_id" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="account_move_view_tree" model="ir.ui.view">
+        <field name="name">account.move.tree.view</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_invoice_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_date'][2]" position="after">
+                <field name="property_expense_id" optional="show" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')" string="Expense Type"/>
             </xpath>
         </field>
     </record>
