--- a/wonoproperty_pms/views/property_unit_views.xml
+++ b/wonoproperty_pms/views/property_unit_views.xml
@@ -33,6 +33,15 @@
                             <field name="tenant_id"/>
                             <field name="date_start"/>
                             <field name="date_end"/>
+                            <field name="currency_id" invisible="1"/>
+                        </group>
+                        <group>
+                            <field name="loan_amount"/>
+                            <field name="end_financier"/>
+                            <field name="s_p_solicitor"/>
+                            <field name="loan_solicitor"/>
+                            <field name="date_purchase"/>
+                            <field name="s_p_amount"/>
                         </group>
                     </group>
                     <notebook>
