--- a/wonoproperty_pms/views/account_move_views.xml
+++ b/wonoproperty_pms/views/account_move_views.xml
@@ -14,6 +14,10 @@
                 <field name="date_to" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
                 <field name="property_expense_id" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')"/>
             </xpath>
+
+            <xpath expr="//field[@name='narration']" position="after">
+                <field name="amount_in_words" nolabel="1"/>
+            </xpath>
         </field>
     </record>
 
