--- a/wonoproperty_pms/views/property_property_views.xml
+++ b/wonoproperty_pms/views/property_property_views.xml
@@ -7,6 +7,9 @@
         <field name="model">property.property</field>
         <field name="arch" type="xml">
             <form string="Property">
+                <header>
+                    <button string='Create Invoices' name="create_invoices" type="object" class="btn-primary"/>
+                </header>
                 <sheet>
                     <div class="oe_title">
                             <label for="name" string="Plan Name"/>
