[IMP] Adding check when creating invoice and minimum amout to expenses

--- a/wonoproperty_pms/views/property_unit_views.xml
+++ b/wonoproperty_pms/views/property_unit_views.xml
@@ -50,6 +50,7 @@
                                 <tree editable="bottom">
                                     <field name="expense_id"/>
                                     <field name="expense_frequency"/>
+                                    <field name="minimum_amount"/>
                                     <field name="fixed_amount"/>
                                     <field name="variable_amount"/>
                                 </tree>
