--- a/wonoproperty_pms/views/property_property_views.xml
+++ b/wonoproperty_pms/views/property_property_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <form string="Property">
                 <header>
-                    <button string='Create Invoices' name="create_invoices" type="object" class="btn-primary"/>
+                    <button string='Auto Create Invoices' name="create_invoices" type="object" class="btn-primary"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
