--- a/wonoproperty_pms/views/property_unit_views.xml
+++ b/wonoproperty_pms/views/property_unit_views.xml
@@ -9,7 +9,7 @@
             <form string="Property Unit">
                 <header>
                     <button string='Update Tenant' name="action_open_tenant_wizard" type="object" class="btn-primary"/>
-                    <button string='Create Invoice' name="action_create_invoice" type="object" class="btn-primary"/>
+                    <button string='Auto Create Invoice' name="action_create_invoice" type="object" class="btn-primary"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -115,9 +115,9 @@
         <field name="name">property.unit.tree.view</field>
         <field name="model">property.unit</field>
         <field name="arch" type="xml">
-            <tree string="Property Units">
-                <field name="name"/>
+            <tree string="Property Units">                
                 <field name="property_id"/>
+                <field name="name"/>
                 <field name="tenant_id"/>
             </tree>
         </field>
