[IMP] adding new changes to PMS

--- a/wonoproperty_pms/views/property_property_views.xml
+++ b/wonoproperty_pms/views/property_property_views.xml
@@ -19,6 +19,7 @@
                         </div>
                     <group string="Information">
                         <group>
+                            <field name="owner_id"/>
                         </group>
                     </group>
                     <group string="Units">
