--- a/wonoproperty_pms/views/res_partner_views.xml
+++ b/wonoproperty_pms/views/res_partner_views.xml
@@ -14,6 +14,12 @@
                     <field name="property_unit_count" widget="statinfo" string="Rooms"/>
                 </button>
             </xpath>
+            <xpath expr="//span[@name='address_name']" position="before">
+                <field name="contact_type"/>
+                <field name="tenancy_agreement"/>
+                <field name="date_start"/>
+                <field name="date_end"/>
+            </xpath>
         </field>
     </record>
 </odoo>
