--- a/wonoproperty_pms/views/property_unit_views.xml
+++ b/wonoproperty_pms/views/property_unit_views.xml
@@ -11,6 +11,7 @@
                     <button string='Update Tenant' name="action_open_actual_tenant_wizard" type="object" class="btn-primary"/>
                     <button string='Update Owner' name="action_open_tenant_wizard" type="object" class="btn-primary"/>
                     <button string='Auto Create Invoice' name="action_create_invoice" type="object" class="btn-primary"/>
+                    <button string='Send Account Statement' name="send_report_email" type="object" class="btn-primary"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -118,6 +119,10 @@
                         </page>
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" groups="base.group_user"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
@@ -126,7 +131,7 @@
         <field name="name">property.unit.tree.view</field>
         <field name="model">property.unit</field>
         <field name="arch" type="xml">
-            <tree string="Property Units">                
+            <tree string="Property Units">
                 <field name="property_id"/>
                 <field name="name"/>
                 <field name="tenant_id"/>
@@ -141,6 +146,19 @@
         <field name="type">ir.actions.act_window</field>
         <field name="view_id" ref="property_unit_view_tree"/>
     </record>
+
+    <record id="account_statement_send" model="ir.actions.server">
+            <field name="name">Send Account Statement</field>
+            <field name="state">code</field>
+            <field name="type">ir.actions.server</field>
+            <field name="model_id" ref="model_property_unit"/>
+            <field name="binding_model_id" ref="model_property_unit"/>
+            <field name="binding_view_types">list</field>
+            <field name="code">
+                if records:
+                    action = records.send_report_email()
+            </field>
+        </record>
 
     <menuitem id="property_unit_menu" name="Property Units" groups="base.group_user"
               parent="wonoproperty_pms_menu" action="property_unit_view_action" sequence="1"/>
